tests/expectations/compiler/core/algorithms/pedersen64_commit_to_group.out
Error [ETYC0372117]: Expected type `bool` but type `group` was found.
    --> compiler-test:40:17
     |
  40 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                 ^
Error [ETYC0372117]: Expected type `bool` but type `group` was found.
    --> compiler-test:40:20
     |
  40 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                    ^
Error [ETYC0372117]: Expected type `bool` but type `group` was found.
    --> compiler-test:40:23
     |
  40 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                       ^
Error [ETYC0372117]: Expected type `bool` but type `group` was found.
    --> compiler-test:40:26
     |
  40 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                          ^
Error [ETYC0372117]: Expected type `bool` but type `group` was found.
    --> compiler-test:40:29
     |
  40 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                             ^
Error [ETYC0372117]: Expected type `bool` but type `group` was found.
    --> compiler-test:40:32
     |
  40 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                                ^
Error [ETYC0372117]: Expected type `bool` but type `group` was found.
    --> compiler-test:40:35
     |
  40 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                                   ^
Error [ETYC0372117]: Expected type `bool` but type `group` was found.
    --> compiler-test:40:38
     |
  40 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                                      ^
Error [ETYC0372117]: Expected type `bool` but type `group` was found.
    --> compiler-test:40:41
     |
  40 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                                         ^
Error [ETYC0372117]: Expected type `bool` but type `group` was found.
    --> compiler-test:40:44
     |
  40 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                                            ^
Error [ETYC0372117]: Expected type `bool` but type `group` was found.
    --> compiler-test:40:47
     |
  40 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                                               ^
Error [ETYC0372117]: Expected type `bool` but type `group` was found.
    --> compiler-test:40:50
     |
  40 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                                                  ^
